Add GoogleService-Info.plist to .gitignore and stop tracking it

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@ DerivedData/
 *.dSYM.zip
 *.dSYM
 
+# Ignore the Firebase config file for iOS
+GoogleService-Info.plist
+
 ## Playgrounds
 timeline.xctimeline
 playground.xcworkspace
